   affect the initialization forms of optional, keyword and aux variables.
   Sample code:
	(defun foo (y)
	  (flet ((faa (&key (x y))
		   (declare (special y))
		   x))
	    (let ((y 4))
	      (declare (special y))
	      (faa))))
   A form (FOO 3) produced 4 before the bug was fixed.

 - The compiler now admits THE forms with type (VALUES ...), though they are
   ignored.

 - (DEFPACKAGE ... (:IMPORT NIL)) failed to import symbol NIL.

 - The compiler and the interpreter now share the same environment
   structure. This is important for issues like shadowing. Take the
   following code:
	(defmacro foo () 2)
	(defmacro test (symbol &environment env)
		(and (macro-function symbol env) t))
	(defun doit () (flet ((foo () 1)) (test foo))))
   If interpreted, DOIT is properly defined to return NIL, because the function
   FOO shadows the global macro definition. If compiled, MACRO-FUNCTION was
   unable to detect the shadowing definition. (B. Spilsbury)

 - The compilation of function calls with more than 64 arguments produced wrong
   code in some cases. The code for this has been reworked and unified with
   code for multiple value calls and other structures such as unwind-protect
   forms.

 - The functions created by MACROLET must be compiled taking into account other
   enclosing MACROLET and SYMBOL-MACRO definitions. This allows one to write
   something like
	(defun a ()
	  (symbol-macro ((x 1))
	    (macrolet ((m () x))
	      (m))))
	(a) => 1
   This has been achieved by merging the C and bytecodes compiler environments.
   We have tried to implement this questionable feaure in the safest way, so
   that references to local variables and functions cause an error at least in
   compiled forms.

* Documentation:

 - The HTML manuals now use CSS for a more appealing look.

* Notes:

 [1] Both bugs are related.

;;; Local Variables: ***
;;; mode:text ***
;;; fill-column:79 ***
;;; End: ***