@@ -1646,6 +1646,8 @@ cl_symbols[] = {
 {KEY_ "LINE-BUFFERED", KEYWORD, NULL, -1, OBJNULL},
 {KEY_ "FULLY-BUFFERED", KEYWORD, NULL, -1, OBJNULL},
 
+{SYS_ "CMP-ENV-REGISTER-MACROLET", SI_ORDINARY, NULL, -1, OBJNULL},
+
 /* Tag for end of list */
 {NULL, CL_ORDINARY, NULL, -1, OBJNULL}};
 
